// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapper matches snapshot 1`] = `
.c0 {
  width: 100%;
  padding: 0 3.2rem;
  position: relative;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen {
  .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin-left: 0;
  }
}

<div
  className="c0"
/>
`;

exports[`wrapper matches snapshot with search open 1`] = `
.c0 {
  width: 100%;
  padding: 0 3.2rem;
  position: relative;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
  margin-left: 44rem;
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen {
  .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin-left: 0;
  }
}

<div
  className="c0"
/>
`;
